# home-automation-system

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: native_sim.conf  native_sim.overlay
include/: gpio_handler.h  mqtt_handler.h  wifi_conn_mgr.h
socs/: esp32_procpu.conf  esp32_procpu.overlay
src/: gpio_handler.c  http_server.c  main.c  mqtt_handler.c  wifi_conn_mgr.c
web_resources/: index.html  main.js
